Changing the settings of windows size and position

--- a/Crypto Notepad/App.config
+++ b/Crypto Notepad/App.config
@@ -12,23 +12,11 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5"/></startup>
     <userSettings>
         <Crypto_Notepad.Properties.Settings>
-            <setting name="TopPosition" serializeAs="String">
-                <value>0</value>
-            </setting>
-            <setting name="LeftPosition" serializeAs="String">
-                <value>0</value>
-            </setting>
             <setting name="RichTextFont" serializeAs="String">
                 <value>Consolas</value>
             </setting>
             <setting name="RichForeColor" serializeAs="String">
                 <value>228, 228, 228</value>
-            </setting>
-            <setting name="FormWidth" serializeAs="String">
-                <value>690</value>
-            </setting>
-            <setting name="FormHeight" serializeAs="String">
-                <value>430</value>
             </setting>
             <setting name="RichBackColor" serializeAs="String">
                 <value>56, 56, 56</value>
@@ -71,6 +59,12 @@
             </setting>
             <setting name="AutoCheckUpdate" serializeAs="String">
                 <value>True</value>
+            </setting>
+            <setting name="AutoLock" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="WindowSize" serializeAs="String">
+                <value>645, 460</value>
             </setting>
         </Crypto_Notepad.Properties.Settings>
         <EncryptPad.Properties.Settings>
