--- a/Crypto Notepad/App.config
+++ b/Crypto Notepad/App.config
@@ -66,6 +66,9 @@
             <setting name="WindowSize" serializeAs="String">
                 <value>645, 460</value>
             </setting>
+            <setting name="WindowState" serializeAs="String">
+                <value>Normal</value>
+            </setting>
         </Crypto_Notepad.Properties.Settings>
         <EncryptPad.Properties.Settings>
             <setting name="TopPosition" serializeAs="String">
