Changed default value

--- a/Crypto Notepad/App.config
+++ b/Crypto Notepad/App.config
@@ -52,7 +52,7 @@
                 <value>False</value>
             </setting>
             <setting name="WarningMsg" serializeAs="String">
-                <value>False</value>
+                <value>True</value>
             </setting>
             <setting name="ShowToolbar" serializeAs="String">
                 <value>True</value>
