Able auto save when locked

--- a/Crypto Notepad/App.config
+++ b/Crypto Notepad/App.config
@@ -43,7 +43,7 @@
                 <value>192</value>
             </setting>
             <setting name="TheSalt" serializeAs="String">
-                <value/>
+                <value />
             </setting>
             <setting name="PasswordIterations" serializeAs="String">
                 <value>2</value>
@@ -68,6 +68,9 @@
             </setting>
             <setting name="WindowState" serializeAs="String">
                 <value>Normal</value>
+            </setting>
+            <setting name="AutoSave" serializeAs="String">
+                <value>True</value>
             </setting>
         </Crypto_Notepad.Properties.Settings>
         <EncryptPad.Properties.Settings>
