--- a/Crypto Notepad/App.config
+++ b/Crypto Notepad/App.config
@@ -72,6 +72,9 @@
             <setting name="AutoSave" serializeAs="String">
                 <value>True</value>
             </setting>
+            <setting name="SendTo" serializeAs="String">
+                <value>False</value>
+            </setting>
         </Crypto_Notepad.Properties.Settings>
         <EncryptPad.Properties.Settings>
             <setting name="TopPosition" serializeAs="String">
