Added integrate with windows context menu settings

--- a/Crypto Notepad/App.config
+++ b/Crypto Notepad/App.config
@@ -75,6 +75,9 @@
             <setting name="SendTo" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="MenuIntegrate" serializeAs="String">
+                <value>False</value>
+            </setting>
         </Crypto_Notepad.Properties.Settings>
         <EncryptPad.Properties.Settings>
             <setting name="TopPosition" serializeAs="String">
