Renamed source files

--- a/Crypto Notepad/Crypto Notepad.csproj
+++ b/Crypto Notepad/Crypto Notepad.csproj
@@ -106,17 +106,17 @@
       <DependentUpon>CustomRichTextBox.cs</DependentUpon>
     </Compile>
     <Compile Include="EncryptedString.cs" />
-    <Compile Include="Form1.cs">
+    <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="MainForm.Designer.cs">
+      <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="Form2.cs">
+    <Compile Include="EnterKeyForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form2.Designer.cs">
-      <DependentUpon>Form2.cs</DependentUpon>
+    <Compile Include="EnterKeyForm.Designer.cs">
+      <DependentUpon>EnterKeyForm.cs</DependentUpon>
     </Compile>
     <Compile Include="MsgBoxCenterParent.cs" />
     <Compile Include="PortableSettingsProvider.cs" />
@@ -139,11 +139,11 @@
     <EmbeddedResource Include="ChangeKeyForm.resx">
       <DependentUpon>ChangeKeyForm.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <EmbeddedResource Include="MainForm.resx">
+      <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Form2.resx">
-      <DependentUpon>Form2.cs</DependentUpon>
+    <EmbeddedResource Include="EnterKeyForm.resx">
+      <DependentUpon>EnterKeyForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
