Added new settings

--- a/Crypto Notepad/App.config
+++ b/Crypto Notepad/App.config
@@ -78,6 +78,12 @@
             <setting name="MenuIntegrate" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="MenuIcons" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="ColoredToolbar" serializeAs="String">
+                <value>False</value>
+            </setting>
         </Crypto_Notepad.Properties.Settings>
         <EncryptPad.Properties.Settings>
             <setting name="TopPosition" serializeAs="String">
