--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -10,3 +10,4 @@ liberapay: sigmanor
 issuehunt: #
 otechie: # Replace with a single Otechie username
 custom: qiwi.com/p/380963679081
+custom: https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=AK9FYCBAHV4U8&source=url
