--- a/Crypto Notepad/App.config
+++ b/Crypto Notepad/App.config
@@ -84,6 +84,9 @@
             <setting name="ColoredToolbar" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="InserKey" serializeAs="String">
+                <value>Enable</value>
+            </setting>
         </Crypto_Notepad.Properties.Settings>
         <EncryptPad.Properties.Settings>
             <setting name="TopPosition" serializeAs="String">
