--- a/Crypto Notepad/App.config
+++ b/Crypto Notepad/App.config
@@ -84,6 +84,33 @@
             <setting name="ColoredToolbar" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="LNVisible" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="LNBackgroundColor" serializeAs="String">
+                <value>53, 53, 53</value>
+            </setting>
+            <setting name="LNFontColorPanel" serializeAs="String">
+                <value>164, 164, 164</value>
+            </setting>
+            <setting name="BLShow" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="BLColor" serializeAs="String">
+                <value>164, 164, 164</value>
+            </setting>
+            <setting name="BLStyle" serializeAs="String">
+                <value>Solid</value>
+            </setting>
+            <setting name="GLShow" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="GLColor" serializeAs="String">
+                <value>164, 164, 164</value>
+            </setting>
+            <setting name="GLStyle" serializeAs="String">
+                <value>Solid</value>
+            </setting>
             <setting name="InserKey" serializeAs="String">
                 <value>Enable</value>
             </setting>
