--- a/Crypto Notepad/App.config
+++ b/Crypto Notepad/App.config
@@ -114,6 +114,9 @@
             <setting name="InserKey" serializeAs="String">
                 <value>Enable</value>
             </setting>
+            <setting name="CustomColor" serializeAs="String">
+                <value>0</value>
+            </setting>
         </Crypto_Notepad.Properties.Settings>
         <EncryptPad.Properties.Settings>
             <setting name="TopPosition" serializeAs="String">
